--- a/dnd-upgrade/src/create-statusbased-card.html
+++ b/dnd-upgrade/src/create-statusbased-card.html
@@ -105,7 +105,16 @@
             },
 			statusList: {
 				type: Array
-			}
+			},
+            resourcesList: {
+                type: Array
+            },
+            defensesList: {
+                type: Array
+            },
+            skillsList: {
+                type: Array
+            }
         },
 
         _requestDeleteCard: function(e){
