--- a/dnd-upgrade/index.html
+++ b/dnd-upgrade/index.html
@@ -45,7 +45,7 @@
             // load pre-caching service worker
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', function() {
-                    navigator.serviceWorker.register('/service-worker.js');
+                    //navigator.serviceWorker.register('/service-worker.js');
                 });
             }
         </script>
