--- a/dnd-upgrade/src/create-status-tab.html
+++ b/dnd-upgrade/src/create-status-tab.html
@@ -28,7 +28,12 @@
             <create-status-card index="{{ index }}"
                                 name="{{ item.name }}"
                                 base-value="{{ item.baseValue }}"
-                                level-modifier="{{ item.levelModifier }}"></create-status-card>
+                                level-modifier="{{ item.levelModifier }}"
+                                dependency-list="{{ item.dependencyList }}"
+                                status-list="{{ statusList }}"
+                                resources-list="[[ resourcesList ]]"
+                                defenses-list="[[ defensesList ]]"
+                                skills-list="[[ skillsList ]]"></create-status-card>
 
         </template>
 
@@ -48,6 +53,15 @@
             statusList: {
                 type: Array,
                 notify: true
+            },
+            resourcesList: {
+                type: Array
+            },
+            defensesList: {
+                type: Array
+            },
+            skillsList: {
+                type: Array
             }
         },
 
@@ -61,6 +75,13 @@
                 value: 0,
                 baseValue: 0,
                 levelModifier: 0,
+                dependencyList: [
+                    {
+                        location: "statusList",
+                        name: null,
+                        value: 0
+                    }
+                ],
                 persistBonus: 0,
                 volatileBonus: 0
             });
