--- a/dnd-upgrade/src/snd-basesheet-data.html
+++ b/dnd-upgrade/src/snd-basesheet-data.html
@@ -47,9 +47,9 @@
                         levelModifier: 0,
                         persistBonus: 0,
                         volatileBonus: 0,
-                        dependency: [
+                        dependencyList: [
                             {
-                            	location: "None",
+                            	location: "statusList",
                             	name: "None",
                             	modifier: 1
 
@@ -63,14 +63,12 @@
                         name: "HP/MP/...",
                         value: 0,
                         baseValue: 0,
-                        statusBase:  "None",
-                        statusBaseModifier: 1,
                         levelModifier: 0.5,
                         persistBonus: 0,
                         volatileBonus: 0,
-                        dependency: [
+                        dependencyList: [
                             {
-                            	location: "None",
+                            	location: "statusList",
                             	name: "None",
                             	modifier: 1
 
@@ -84,14 +82,12 @@
                         name: "Armor/Magic Resistence/...",
                         value: 0,
                         baseValue: 10,
-                        statusBase: "None",
-                        statusBaseModifier: 1,
                         levelModifier: 0.5,
                         persistBonus: 0,
                         volatileBonus: 0,
-                        dependency: [
+                        dependencyList: [
                             {
-                            	location: "None",
+                            	location: "statusList",
                             	name: "None",
                             	modifier: 1
 
@@ -107,14 +103,12 @@
                         name: "Diplomacy/Heal...",
                         value: 0,
                         baseValue: 10,
-                        statusBase: "None",
-                        statusBaseModifier: 1,
                         levelModifier: 0.5,
                         persistBonus: 0,
                         volatileBonus: 0,
-                        dependency: [
+                        dependencyList: [
                             {
-                            	location: "None",
+                            	location: "statusList",
                             	name: "None",
                             	modifier: 1
 
